--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                                 <a href="awakened.html">Awakened Cards</a>
                             </li>
                             <li>
-                                <a href="portfolio-2-col.html">UR, HUR, GUR Cards</a>
+                                <a>UR, HUR, GUR Cards</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">SR, HSR, GSR Cards</a>
+                                <a>SR, HSR, GSR Cards</a>
                             </li>
                             <li>
-                                <a href="portfolio-4-col.html">R and HR Cards</a>
+                                <a>R and HR Cards</a>
                             </li>
                         </ul>
                     </li>
@@ -68,18 +68,21 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="blog-home-1.html">A Dark and Dreary Autumn</a>
+                                <a>A Dark and Dreary Autumn</a>
                             </li>
                             <li>
-                                <a href="blog-home-2.html">Bounty Hunt 2</a>
+                                <a>Bounty Hunt 2</a>
                             </li>
                             <li>
-                                <a href="blog-post.html">List of Events joined</a>
+                                <a>List of Events joined</a>
                             </li>
                         </ul>
                     </li>
                     <li>
                         <a href="https://startbootstrap.com/template-overviews/modern-business/">Theme</a>
+                    </li>
+                    <li>
+                        <a href="chitamitan.github.io">Visit my Website! :D</a>
                     </li>
                 </ul>
             </div>
@@ -135,7 +138,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to ちたみたんnoob's Kingdom!
+                    Welcome to ちたみたんnoob's profile!
                 </h1>
                 <!-- Features Section -->
                 <div class="row">
@@ -145,7 +148,7 @@
                     <div class="col-md-6">
                         <ul>
                             <li><b>Username:</b> ちたみたんnoob</li>
-                            <li><b>Level:</b> 99 (yesssh ^o^)</li>
+                            <li><b>Level:</b> 100</li>
                             <li><b>1st Kingdom name:</b> NoobCapital</li>
                             <li><b>2nd Kingdom name:</b> DumpAllHere</li>
                             <li><b>Alliance:</b> Phantom Legion</li>
@@ -170,33 +173,33 @@
                 <br>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a>
+                    <img class="img-responsive img-portfolio img-hover" src="images/cards/thumbnail/no-content.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a>
+                    <img class="img-responsive img-portfolio img-hover" src="images/cards/thumbnail/no-content.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a>
+                    <img class="img-responsive img-portfolio img-hover" src="images/cards/thumbnail/no-content.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a>
+                    <img class="img-responsive img-portfolio img-hover" src="images/cards/thumbnail/no-content.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a>
+                    <img class="img-responsive img-portfolio img-hover" src="images/cards/thumbnail/no-content.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a>
+                    <img class="img-responsive img-portfolio img-hover" src="images/cards/thumbnail/no-content.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -215,8 +218,8 @@
                                 <h4><i class="fa fa-fw fa-check"></i> Bootstrap v3.3.7</h4>
                             </div>
                             <div class="panel-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                                <a href="#" class="btn btn-default">Learn More</a>
+                                <p>Coming Soon</p>
+                                <a class="btn btn-default">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -226,8 +229,8 @@
                                 <h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
                             </div>
                             <div class="panel-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                                <a href="#" class="btn btn-default">Learn More</a>
+                                <p>Coming Soon</p>
+                                <a class="btn btn-default">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -237,8 +240,8 @@
                                 <h4><i class="fa fa-fw fa-compass"></i> Easy to Use</h4>
                             </div>
                             <div class="panel-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                                <a href="#" class="btn btn-default">Learn More</a>
+                                <p>Coming Soon</p>
+                                <a class="btn btn-default">Learn More</a>
                             </div>
                         </div>
                     </div>
