--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <div class="col-md-4">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h4><i class="fa fa-fw fa-check"></i> Bootstrap v3.3.7</h4>
+                                <h4><i class="fa fa-fw fa-check"></i> Coming Soon</h4>
                             </div>
                             <div class="panel-body">
                                 <p>Coming Soon</p>
@@ -226,7 +226,7 @@
                     <div class="col-md-4">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
+                                <h4><i class="fa fa-fw fa-gift"></i> Coming Soon</h4>
                             </div>
                             <div class="panel-body">
                                 <p>Coming Soon</p>
@@ -237,7 +237,7 @@
                     <div class="col-md-4">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h4><i class="fa fa-fw fa-compass"></i> Easy to Use</h4>
+                                <h4><i class="fa fa-fw fa-compass"></i> Coming Soon</h4>
                             </div>
                             <div class="panel-body">
                                 <p>Coming Soon</p>
